changed color of schedule an appointment button

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -9,7 +9,7 @@
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <%=  image_tag("logo.png", class:"responsive-img") %>
-        <li><a href="badges.html">Schedule an Appointment</a></li>
+        <li><a class="modal-trigger" href="#modal1">Schedule an Appointment</a></li>
         <li><a href="collapsible.html">Blog</a></li>
         <li><a href="mobile.html">About Dr. Kealy</a></li>
       </ul>
