--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,9 @@ $primary-body: #EF2C32;
 .navbar a:link {
   color: $primary-text;
 }
+ a.modal-trigger {
+  color: $primary-text !important;
+ }
 
 .modal-content {
   padding: 10 0 0 0 !important;
