made changes lauren requested no address and changed schedule to prod

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -8,16 +8,16 @@
       <div class="col l2 offset-l1 s12 ">
         <h5>Social Media</h5>
         <ul>
-          <li><a href="#!"><i class="fa fa-facebook-square"></i> Facebook</a></li>
-          <li><a href="#!"><i class="fa fa-instagram"></i> Instagram</a></li>
-          <li><a href="#!"><i class="fa fa-twitter"></i> Twitter</a></li>
+          <li><a href="https://www.facebook.com/MovePTDenver"><i class="fa fa-facebook-square"></i> Facebook</a></li>
+          <!-- <li><a href="#!"><i class="fa fa-instagram"></i> Instagram</a></li> -->
+          <li><a href="https://twitter.com/MovePT_Denver"><i class="fa fa-twitter"></i> Twitter</a></li>
 
         </ul>
       </div>
       <div class="col l2 offset-l1 s12 ">
         <h5>Contact US</h5>
         <ul>
-          <li><a href="#!"><i class="fa fa-map-marker"></i> 5043 Akron St, <br>  Denver CO 80238</a></li>
+          <li><a href="#!"><i class="fa fa-map-marker"></i> Denver, CO</a></li>
           <li><i class="fa fa-mobile"></i> <a href="tel:+7206631937"> 720-663-1937</a></li>
           <li><i class="fa fa-envelope-o"></i>
  <%= mail_to "lauren@move-pt.com", "lauren@move-pt.com" %></li>
