--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -6,7 +6,7 @@
         <p>Here is basic info about you or if you prefer you can do a blurb about your core values. Your pick</p>
       </div>
       <div class="col l2 offset-l1 s12 ">
-        <h5>Social Media</h5>
+        <h5>Let's Connect!</h5>
         <ul>
           <li><a href="https://www.facebook.com/MovePTDenver"><i class="fa fa-facebook-square"></i> Facebook</a></li>
           <!-- <li><a href="#!"><i class="fa fa-instagram"></i> Instagram</a></li> -->
@@ -15,7 +15,7 @@
         </ul>
       </div>
       <div class="col l2 offset-l1 s12 ">
-        <h5>Contact US</h5>
+        <h5>Contact Us</h5>
         <ul>
           <li><a href="#!"><i class="fa fa-map-marker"></i> Denver, CO</a></li>
           <li><i class="fa fa-mobile"></i> <a href="tel:+7206631937"> 720-663-1937</a></li>
@@ -28,7 +28,6 @@
   <div class="footer-copyright copy">
     <div class="container">
     © 2015 Move PT LLC
-    <a class="right" href="#!">More Links</a>
     </div>
   </div>
 </footer>
