added headshot image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,10 @@ $primary-body: #EF2C32;
   color: $primary-text;
 }
 
+.img-pad {
+  margin-top: 2vh;
+}
+
 a.modal-trigger {
   color: $primary-text !important;
 }
