--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,9 +1,16 @@
 <div class="divider"></div>
 <footer class="page-footer footer">
     <div class="row">
-      <div class="col l4 s10 offset-s1 offset-l1">
-        <h5>Dr. Lauren Kealy</h5>
-        <p>Here is basic info about you or if you prefer you can do a blurb about your core values. Your pick</p>
+      <div class="col l4 s10">
+        <div class="row">
+          <div class="col l3 s3">
+            <%= image_tag("headshot.png", class:"img-thumbnail img-responsive cent-blcok img-pad") %>
+          </div>
+          <div class="col l9 s9">
+            <h5>Dr. Lauren Kealy</h5>
+            <p>Here is basic info about you or if you prefer you can do a blurb about your core values. Your pick</p>
+          </div>
+        </div>
       </div>
       <div class="col l2 offset-l1 s12 ">
         <h5>Let's Connect!</h5>
