changed footer image

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,18 +1,18 @@
 <div class="divider"></div>
-<footer class="page-footer footer">
+<footer class="page-footer footer ">
     <div class="row">
       <div class="col l4 s10">
         <div class="row">
-          <div class="col l3 s3">
-            <%= image_tag("headshot.png", class:"img-thumbnail img-responsive cent-blcok img-pad") %>
+          <div class="col l3 s4">
+            <%= image_tag("headshot.png", class:"img-thumbnail img-responsive img-pad") %>
           </div>
-          <div class="col l9 s9">
+          <div class="col l9 s8">
             <h5>Dr. Lauren Kealy</h5>
             <p>Here is basic info about you or if you prefer you can do a blurb about your core values. Your pick</p>
           </div>
         </div>
       </div>
-      <div class="col l2 offset-l1 s12 ">
+      <div class="col l2 offset-l1 s12">
         <h5>Let's Connect!</h5>
         <ul>
           <li><a href="https://www.facebook.com/MovePTDenver"><i class="fa fa-facebook-square"></i> Facebook</a></li>
@@ -26,9 +26,10 @@
         <ul>
           <li><a href="#!"><i class="fa fa-map-marker"></i> Denver, CO</a></li>
           <li><i class="fa fa-mobile"></i> <a href="tel:+7206631937"> 720-663-1937</a></li>
-          <li><i class="fa fa-envelope-o"></i>
- <%= mail_to "lauren@move-pt.com", "lauren@move-pt.com" %></li>
-
+          <li>
+            <i class="fa fa-envelope-o"></i>
+            <%= mail_to "lauren@move-pt.com", "lauren@move-pt.com" %>
+          </li>
         </ul>
       </div>
     </div>
