--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,5 +1,5 @@
-  <nav>
-    <div class="nav-wrapper">
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="nav-wrapper container-fluid">
       <a href="#!" class="brand-logo"><%= image_tag("navbar_logo.png", class:"responsive-img") %></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
