--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -5,7 +5,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a class="modal-trigger" href="#modal1">Schedule an Appointment</a></li>
         <li><a href="collapsible.html">Blog</a></li>
-        <li><a href="mobile.html">About Dr. Kealy</a></li>
+        <li><a href="/about">About Dr. Kealy</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <%=  image_tag("logo.png", class:"responsive-img") %>
