--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class="col l4 s10">
         <div class="row">
           <div class="col l3 s4">
-            <%= image_tag("headshot.png", class:"img-thumbnail img-responsive img-pad") %>
+            <%= image_tag("headshot.png", class:"img-thumbnail responsive-img img-pad") %>
           </div>
           <div class="col l9 s8">
             <h5>Dr. Lauren Kealy</h5>
