changed color of schedule button to stand out more

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,10 @@ body {
   padding-top: 70px;
 }
 
+#schedule {
+  color: $primary-body !important;
+}
+
 .navbar a:link {
   color: $primary-text;
 }
