--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,9 +1,9 @@
   <nav class="navbar navbar-default navbar-static-top">
     <div class="nav-wrapper container-fluid">
-      <a href="#!" class="brand-logo"><%= image_tag("navbar_logo.png", class:"responsive-img") %></a>
+      <a href="/" class="brand-logo"><%= image_tag("navbar_logo.png", class:"responsive-img") %></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a class="modal-trigger" href="#modal1">Schedule an Appointment</a></li>
+        <li><a class="modal-trigger" id="schedule" href="#modal1">Schedule an Appointment</a></li>
         <li><a href="collapsible.html">Blog</a></li>
         <li><a href="/about">About Dr. Kealy</a></li>
       </ul>
