--- a/app/views/partials/_schedule_modal.html.erb
+++ b/app/views/partials/_schedule_modal.html.erb
@@ -1,12 +1,12 @@
-  <div id="modal1" class="modal modal-fixed-footer">
+  <div id="modal1" class="modal">
     <div class="modal-content">
       <div class="row">
         <iframe src="https://app.acuityscheduling.com/schedule.php?owner=11467472" width="100%" height="800" frameBorder="0"></iframe>
       </div>
     </div>
-    <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
+<!--     <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+    </div> -->
   </div>
 
   
