added blurb section with real wording for Lauren

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,21 +3,21 @@
 </div>
 <div class="row section center-align blurbs">
   <div class="col s12 m6 l6">
-      <h4 class="header light">Physical Therapy, Strength and Conditioning</h4>
-      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <h4 class="header light">Keep Going.</h4>
+      <p>One WOD does not fit all. Our mission here at Move is to keep you moving pain free through personalized assessments and education. We conduct sport specific movement screens that analyze a mix of functional movements, joint and muscle strength, and past injuries to provide you with a personalized injury prevention plan. Whether your sport is walking the dog around the neighborhood or swinging the heaviest kettle bell you can find, we can help you understand your body better to prevent injury and achieve your goals. Book an appointment online today!</p>
   </div>
   <div class="col s12 m6 l6">
-    <h4 class="header light">Group Classes and Events</h4>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <h4 class="header light">Move on the Move</h4>
+    <p>Let our team come to your team. Fear of injury ranks near the top of the list on why individuals don’t join a team or gym. Give your current and future members piece of mind by partnering with Move to provide the best care in injury prevention. Group assessments are available. Connect with us to learn more on how we can work together. </p>
   </div>
 </div>
 <div class="row center-align">
   <div class="col s12 m6 l6 ">
-      <h4 class="header light">Move on the Move</h4>
-      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <h4 class="header light">Classes and Events</h4>
+      <p>Be sure to check out our events calendar tab for classes or seminars on varying topics. We talk about anything from shoulder injuries in overhead athletes to how to best recovery from childbirth. We run the gamut on topics!  </p>
   </div>
   <div class="col s12 m6 l6">
-    <h4 class="header light">Social Responsibility</h4>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <h4 class="header light">Giving Back</h4>
+    <p>We believe that everyone should be empowered to live a healthy lifestyle and that is why Move helps out at community health fairs and donates a percentage of profits to like-minded charities and programs. By supporting Move, you’re supporting the local community. </p>
   </div>
 </div>
