--- a/app/views/partials/_carousel.html.erb
+++ b/app/views/partials/_carousel.html.erb
@@ -1,31 +1,46 @@
 <div class="slider">
   <ul class="slides">
     <li>
-      <%= image_tag("carousel1.png") %>
-      <div class="caption center-align">
-        <h3>This is our big Tagline!</h3>
-        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+      <%= image_tag("lauren-pt.png") %>
+      <div class="caption row right-align">
+        <div class="col s9 m8  l7 offset-s3 offset-m4 offset-l5 ">
+          <h3 class="whiter">A hands on approach</h3>
+          <h5 class="light whiter">We use a combination of hands-on manual therapy followed by corrective exercise to help you meet your goals</h5>
+          </div>
       </div>
     </li>
     <li>
-      <%= image_tag("carousel2.png") %>
-      <div class="caption left-align">
-        <h3>Left Aligned Caption</h3>
-        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+      <%= image_tag("officespace.png") %>
+      <div class="caption row left-align">
+        <div class="col s7 m8 l7 ">
+          <h3 class="blacker">Get Comfy!</h3>
+          <h5 class="light blacker">We use private treatment rooms. No group treatments here!</h5>
+        </div>
       </div>
     </li>
     <li>
-      <img src="http://lorempixel.com/580/250/nature/3"> <!-- random image -->
+      <%= image_tag("laurenkettlebell.png") %>
       <div class="caption right-align">
-        <h3>Right Aligned Caption</h3>
-        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        <h3 class="">We are movement experts </h3>
+        <h5 class="light grey-text text-lighten-3">Let us help you perfect however you choose to move </h5>
       </div>
     </li>
     <li>
-      <img src="http://lorempixel.com/580/250/nature/4"> <!-- random image -->
-      <div class="caption center-align">
-        <h3>This is our big Tagline!</h3>
-        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+      <%= image_tag("skeleton.png") %>
+      <div class="caption right-align row">
+        <div class="col s9 l9 m9 offset-l3 offset-m3 offset-s3">
+          <h3 class="">PSSSST! </h3>
+          <h5 class="light grey-text text-lighten-3">George the skeleton wants to remind you that you can pay for appointments with your FSA or HSA card </h5>
+        </div>
+      </div>
+    </li>
+    <li>
+      <%= image_tag("kettlebells.png") %>
+      <div class="caption right-align row ">
+        <div class="col s9 l9 m9 offset-l3 offset-m3 offset-s3">
+          <h3 class="">Work with us! </h3>
+          <h5 class="light grey-text text-lighten-3">Are you a coach, gym owner, or trainer and want to offer your clients the best in personalized injury prevention? Get in touch! </h5>
+        </div>
       </div>
     </li>
   </ul>
