added WOD medic

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -36,6 +36,7 @@
   <div class="footer-copyright copy">
     <div class="container">
     © 2015 Move PT LLC
+    <%= image_tag("wod_medic.png", class:"right image-responsive pads")  %>
     </div>
   </div>
 </footer>
