changed blog added locations

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -7,9 +7,9 @@
     <h3>Dr. Lauren Kealy</h3>
     <div class="divider"></div>
     <h4>About:</h4>
-    <p class="flow-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</</p>
-    <div class="divider"></div>
+    <p class="flow-text">Dr. Kealy is a Doctor of Physical Therapy passionate about injury prevention of the everyday athlete. As a D1 NCAA athlete in college and current endurance athlete, Lauren understands the need to stay healthy and moving. Lauren uses a movement analysis based approach to create custom injury prevention plans and exercise modifications to keep you moving but still achieving your goals.</</p>
+<!--     <div class="divider"></div>
     <h4>Education:</h4>
-    <p class="flow-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</</p>
+    <p class="flow-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p> -->
   </div>
 </div>
