--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -8,7 +8,7 @@
           </div>
           <div class="col l9 s8">
             <h5>Dr. Lauren Kealy</h5>
-            <p>Here is basic info about you or if you prefer you can do a blurb about your core values. Your pick</p>
+            <p>Dr. Kealy is a Doctor of Physical Therapy passionate about injury prevention of the everyday athlete.</p>
           </div>
         </div>
       </div>
