--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -4,13 +4,15 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a class="modal-trigger" id="schedule" href="#modal1">Schedule an Appointment</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <!-- <li><a href="/blog">Blog</a></li> -->
+        <li><a href="/locations">Locations</a></li>
         <li><a href="/about">About Dr. Kealy</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <%=  image_tag("logo.png", class:"responsive-img") %>
         <li><a class="modal-trigger" href="#modal1">Schedule an Appointment</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <!-- <li><a href="/blog">Blog</a></li> -->
+        <li><a href="/locations">Locations</a></li>
         <li><a href="/about">About Dr. Kealy</a></li>
       </ul>
     </div>
