changed image sizes to not cut off

--- a/app/views/partials/_carousel.html.erb
+++ b/app/views/partials/_carousel.html.erb
@@ -19,14 +19,14 @@
       </div>
     </li>
     <li>
-      <%= image_tag("laurenkettlebell.png") %>
-      <div class="caption right-align">
+      <%= image_tag("laurenkettlebell2.png") %>
+      <div class="caption  right-align">
         <h3 class="">We are movement experts </h3>
         <h5 class="light grey-text text-lighten-3">Let us help you perfect however you choose to move </h5>
       </div>
     </li>
     <li>
-      <%= image_tag("skeleton.png") %>
+      <%= image_tag("skeleton2.png") %>
       <div class="caption right-align row">
         <div class="col s9 l9 m9 offset-l3 offset-m3 offset-s3">
           <h3 class="">PSSSST! </h3>
