--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,5 @@
-  <nav class="navbar navbar-default navbar-static-top">
+  <div class="navbar-fixed">
+  <nav class="navbar">
     <div class="nav-wrapper container-fluid">
       <a href="/" class="brand-logo"><%= image_tag("navbar_logo.png", class:"responsive-img") %></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -9,7 +10,7 @@
         <li><a href="/about">About Dr. Kealy</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <%=  image_tag("logo.png", class:"responsive-img") %>
+      <%=  image_tag("logo.png", class:"responsive-img") %>
         <li><a class="modal-trigger" href="#modal1">Schedule an Appointment</a></li>
         <!-- <li><a href="/blog">Blog</a></li> -->
         <li><a href="/locations">Locations</a></li>
@@ -17,5 +18,6 @@
       </ul>
     </div>
   </nav>
+  </div>
 
   <%= render "partials/schedule_modal" %>
