--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="divider"></div>
-<footer class="page-footer footer ">
+<footer class="page-footer footer  center-align">
     <div class="row">
       <div class="col l4 s10">
-        <div class="row">
+        <div class="row hide-on-med-and-down">
           <div class="col l3 s4">
             <%= image_tag("headshot.png", class:"img-thumbnail responsive-img img-pad") %>
           </div>
