--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -11,7 +11,7 @@
       </ul>
       <ul class="side-nav" id="mobile-demo">
       <%=  image_tag("logo.png", class:"responsive-img") %>
-        <li><a class="modal-trigger" href="#modal1">Schedule an Appointment</a></li>
+        <li><a  class="schedule" href="/schedule_appointment">Schedule an Appointment</a></li>
         <!-- <li><a href="/blog">Blog</a></li> -->
         <li><a href="/locations">Locations</a></li>
         <li><a href="/about">About Dr. Kealy</a></li>
