fixed spacer which was too large

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
     <p>We believe that everyone should be empowered to live a healthy lifestyle and that is why Move helps out at community health fairs and donates a percentage of profits to like-minded charities and programs. By supporting Move, you’re supporting the local community. </p>
   </div>
 </div>
-<div class="divider spacer"></div>
+<div class="divider"></div>
 <!-- <div class="container center-align testimonials">
   <div class="row">
   <h4 class="header light">Customer Testimonials</h4>
