--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Move PT. Keep Going.</title>
   <%= favicon_link_tag 'favicon.ico' %>
+  <meta name="description" content="Dr. Kealy is a Doctor of Physical Therapy passionate about injury prevention of the everyday athlete.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <%= stylesheet_link_tag    'application', media: 'all' %>
