--- a/app/views/home/locations.html.erb
+++ b/app/views/home/locations.html.erb
@@ -8,10 +8,10 @@
           <h4>Move-PT:
           <h5><%= link_to("3700 Havana St #218, Denver, CO 80239", "https://www.google.com/maps/place/3700 Havana St,+Denver,+CO+80239" , target: "_blank") %>
           </h5>
-          <em>inside of the Crossfit Stapleton</em>
+          <em>inside of the <%= link_to("Crossfit Stapleton","http://crossfitstapleton.com/" ) %> </em>
         </div>
         <div class="row">
-          <%= image_tag("Crossfit-Stapleton.png", class:"image-responsive center-align") %>
+          <%= link_to( image_tag("Crossfit-Stapleton.png", class:"image-responsive center-align"), "http://crossfitstapleton.com/") %>
         </div> 
       </div>
     </div>
@@ -32,6 +32,7 @@
       </iframe>
     </div>
   </div>
+  <h3 class="center-align">More Locations Coming Soon!</h3>
 </div>
 
     
