--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@ $primary-color: white !default;
 $primary-text: #2d2d2d;
 $primary-body: #EF2C32;
 $back-text: #ffffff;
+$blog-text: #bdbdbd;
 
 .schedule {
   color: $primary-body !important;
@@ -22,6 +23,11 @@ $back-text: #ffffff;
 
 a {
   color: $primary-body;
+}
+
+.blog-text {
+  color: $blog-text;
+  margin: 0;
 }
 
 .navbar-static-top {
