--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,24 +22,6 @@
   </div>
 </div>
 <div class="divider"></div>
-<!-- <div class="container center-align testimonials">
-  <div class="row">
-  <h4 class="header light">Customer Testimonials</h4>
-    <div  class="test" id="testimonial1">
-      <p><em>“Lauren served as our team therapist during the Race Across America (a 3,000 mile bicycle race) and I can honestly say that her expertise kept me on the road pain free. Lauren was able to quickly assess any irritation or ache and was ready with a treatment that worked every time. She went beyond the immediate treatment and offered suggestions which will help me in the future as I continue a very active lifestyle.  I am impressed with Lauren's depth of knowledge, insight, and strength (!) and would highly recommend her to anyone who is looking to maintain a healthy body for the longterm.”</em> <strong>–Julie Lyons, Love Sweat & Gears Cycling Team</strong></p>
-    </div>
-    <div  class="test" id="testimonial2">
-      <p><em>"Lauren's professionalism and knowledge put me at ease every time I came off my bike during Race Across America.  She asked all the right questions and was so observant, she pretty much knew the answers to her questions before I answered them (which also meant I couldn't "pretend" something was fine when it wasn't).  Lauren is a spectacular Physical Therapist with a fresh perspective and attitude that is tough to find."</em>  <strong>~ Susie Wargin</strong></p>
-    </div>
-  </div>
-</div> -->
-<div class="container center-align testimonials">
-  <h4 class="header light">Customer Testimonials</h4>
-  <div id="cust1">
-    <p><em>“Lauren served as our team therapist during the Race Across America (a 3,000 mile bicycle race) and I can honestly say that her expertise kept me on the road pain free. Lauren was able to quickly assess any irritation or ache and was ready with a treatment that worked every time. She went beyond the immediate treatment and offered suggestions which will help me in the future as I continue a very active lifestyle.  I am impressed with Lauren's depth of knowledge, insight, and strength (!) and would highly recommend her to anyone who is looking to maintain a healthy body for the longterm.”</em> <strong>–Julie Lyons, Love Sweat & Gears Cycling Team</strong></p>
-  </div>
-  <div id="cust2">
-    <p><em>"Lauren's professionalism and knowledge put me at ease every time I came off my bike during Race Across America.  She asked all the right questions and was so observant, she pretty much knew the answers to her questions before I answered them (which also meant I couldn't "pretend" something was fine when it wasn't).  Lauren is a spectacular Physical Therapist with a fresh perspective and attitude that is tough to find."</em>  <strong>~ Susie Wargin</strong></p>
-  </div>
-</div>
+<%= render "partials/testimonials"  %>
+
 
